--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-radxa-otgutils (0.2.0) UNRELEASED; urgency=medium
+radxa-otgutils (0.2.0) stable; urgency=medium
 
   * Switching to Debian release format
 
- -- "Radxa Computer Co., Ltd" <dev@radxa.com>  Wed, 14 Sep 2022 14:31:36 +0800
+ -- "Radxa Computer Co., Ltd" <dev@radxa.com>  Tue, 31 Jan 2023 14:52:53 +0800
