--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+radxa-otgutils (0.2.2) stable; urgency=medium
+
+  [ ZHANG Yuntian ]
+  * Do not create source package
+  * Add function_stop
+  * Better way to detect adbd
+  * Allow multiple gadgets to be enabled
+  * Fix symlink creation
+  * Fix function detection
+  * Proper way to disable function
+  * Fix systemd invoke ExecStop immediately
+  * This could fail if the device is already enabled
+  * Fix adbd restart
+
+ -- "Radxa Computer Co., Ltd" <dev@radxa.com>  Mon, 24 Apr 2023 22:21:30 +0800
+
 radxa-otgutils (0.2.1) stable; urgency=medium
 
   * Add android-tools-adbd to recommends
